--- a/main.html
+++ b/main.html
@@ -14,7 +14,8 @@
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
             padding: 30px;
             text-align: center;
-            width: 400px;
+            width:24em;
+            height: 20em;
             transition: transform 0.3s;
         }
         .profile-container:hover {
@@ -71,24 +72,14 @@ body{
     font-family: 'Exo', sans-serif;
 }
 
-/* 
-.profile-container  {
-    width: 32%;
-    position: absolute;
-    top:20%;
-     left: 30%;   
-} */
 
 
 .profile-container  {
-    /* width: 32%; */
     position: absolute;
     left: 0;
     right: 0;
     margin-inline: auto;
-    /* width: fit-content; */
-    /* top:20%; */
-    /* left: 30%; */    
+
 }
 
 
